--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "uvicorn>=0.34.2",
     "beanie>=1.29.0",
+    "clickhouse-sqlalchemy>=0.3.2",
 ]
 
 [dependency-groups]
