Refactor: Replace OLTP/OLAP models with API-based architecture

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 # MongoDB
 MONGO__CONNECTION__SCHEME=mongodb
-MONGO__CONNECTION__HOST=mongo
+MONGO__CONNECTION__HOST=localhost
 MONGO__CONNECTION__PORT=27017
 MONGO__CONNECTION__USERNAME=username
 MONGO__CONNECTION__PASSWORD=password
-MONGO__DATABASE=database
+MONGO__DATABASE=test
 
 # ClickHouse
 CLICKHOUSE__CONNECTION__SCHEME=clickhouse+asynch
-CLICKHOUSE__CONNECTION__HOST=clickhouse
+CLICKHOUSE__CONNECTION__HOST=localhost
 CLICKHOUSE__CONNECTION__PORT=8123
 CLICKHOUSE__CONNECTION__USERNAME=username
 CLICKHOUSE__CONNECTION__PASSWORD=password
-CLICKHOUSE__DATABASE=database
+CLICKHOUSE__DATABASE=test
