--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ dependencies = [
     "pydantic>=2.11.3",
     "pydantic-settings>=2.9.1",
     "uvicorn>=0.34.2",
-    "beanie>=1.29.0",
-    "clickhouse-sqlalchemy>=0.3.2",
+    "fastapi-pagination>=0.13.1",
+    "motor>=3.7.0",
 ]
 
 [dependency-groups]
