Add Kafka integration with FastStream and update configurations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "uvicorn>=0.34.2",
     "fastapi-pagination>=0.13.1",
     "motor>=3.7.0",
+    "faststream[kafka]>=0.5.40",
 ]
 
 [dependency-groups]
