--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ CLICKHOUSE__CONNECTION__PORT=8123
 CLICKHOUSE__CONNECTION__USERNAME=username
 CLICKHOUSE__CONNECTION__PASSWORD=password
 CLICKHOUSE__DATABASE=test
+
+# Kafka
+KAFKA__CONNECTION__SCHEME=kafka
+KAFKA__CONNECTION__HOST=localhost
+KAFKA__CONNECTION__PORT=9092
