--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,12 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = ["mypy>=1.15.0", "pytest>=8.3.5", "ruff>=0.11.7"]
+dev = [
+    "mypy>=1.15.0",
+    "pytest-asyncio>=0.26.0",
+    "pytest>=8.3.5",
+    "ruff>=0.11.7",
+]
 
 [tool.ruff]
 show-fixes = true
@@ -27,3 +32,6 @@ strict = true
 ignore_missing_imports = true
 implicit_optional = true
 plugins = ['pydantic.mypy']
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
