--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dev = [
     "httpx>=0.28.1",
     "mypy>=1.15.0",
     "pytest-asyncio>=0.26.0",
+    "pytest-cov>=6.1.1",
     "pytest>=8.3.5",
     "ruff>=0.11.7",
 ]
